Sidebar spacing fixes

--- a/themes/hugo-creative-portfolio-theme/static/css/style.pink.css
+++ b/themes/hugo-creative-portfolio-theme/static/css/style.pink.css
@@ -465,7 +465,7 @@ OFF-CANVAS SIDEBAR BEHAVIOUR
 =====================
 
 */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1000px) {
   .row-offcanvas {
     position: relative;
     -webkit-transition: all 0.25s ease-out;
@@ -480,25 +480,25 @@ OFF-CANVAS SIDEBAR BEHAVIOUR
     left: 0;
   }
   .row-offcanvas-right .sidebar-offcanvas {
-    right: -50%;
+    right: -60%;
     /* 6 columns */
   }
   .row-offcanvas-left .sidebar-offcanvas {
-    left: -48%;
+    left: -70%;
     /* 6 columns */
   }
   .row-offcanvas-right.active {
-    right: 50%;
+    right: 60%;
     /* 6 columns */
   }
   .row-offcanvas-left.active {
-    left: 50%;
+    left: 80%;
     /* 6 columns */
   }
   .sidebar-offcanvas {
     position: absolute;
     top: 0;
-    width: 50%;
+    width: 70%;
     /* 6 columns */
   }
 }
